--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -130,6 +130,109 @@
       "location": "இடம்: எண்: 16, 600042, 12, ஸ்ரீநிவாச நகர் 2வது வீதி, ராம் நகர், தேவி கருமாரியம்மன் நகர், மோகன்புரி, வேளச்சேரி, சென்னை, தமிழ்நாடு 600042"
     }
   },
+  "ace": {
+    "title": "ஏஸ் பனாசியா லைஃப் ஸ்கில்ஸ் ப்ரைவேட் லிமிடெட்",
+    "tagline": "தொலைநோக்கு தொடர்பு | உணர்ச்சி நுண்ணறிவு | மாற்றும் ஊக்கமளிப்பு",
+
+    "intro": {
+      "heading": "வரவேற்கின்றோம்",
+      "description1": "உங்கள் நிறுவனத்தின் தொடர்பு திறமை, உணர்ச்சி பண்பாடு மற்றும் பிராண்டு மகிமையை உயர்த்த ஒரே நம்பகமான தோழரைத் தேடுகிறீர்களா? உங்கள் தேடல் இங்கு முடிவடைகிறது.",
+      "description2": "ஏஸ் பனாசியா வாழ்க்கைத் திறன்கள் தனியார் நிறுவனம் பயிற்சி, ஆலோசனை மற்றும் ஊக்கப்பாடலின் மூலம் தாக்கம் ஏற்படுத்துகிறது.",
+      "description3": "நாங்கள் வெறும் பயிற்சி அளிக்கவில்லை — நாங்கள் ஊக்குவிக்கிறோம், இணைக்கிறோம்."
+    },
+
+    "vision": {
+      "title": "எங்கள் பார்வை",
+      "text": "இதயம் மற்றும் யோசனையால் வளமான உலகம், உண்மை மற்றும் ஊடகங்களால் உயர்ந்த ஒன்று — நாம் ஏஸ் பனாசியா."
+    },
+
+    "mission": {
+      "title": "எங்கள் பணிக்கோள்",
+      "text": "ஒவ்வொரு வார்த்தை, காட்சி, குரலிலும் ஆன்மாக்களை தொடுவதற்கும் மாற்றத்தை ஏற்படுத்துவதற்கும் — நாங்கள் முயற்சிக்கிறோம்."
+    },
+
+    "about": {
+      "title": "எங்களைப் பற்றி",
+      "description1": "2009ல் தொடங்கப்பட்டது, இந்தியா முழுவதும் மனிதவள வளர்ச்சியில் தலைசிறந்த நிறுவனம்.",
+      "description2": "உணர்ச்சி மற்றும் கலாச்சார உணர்வுடன் கூடிய பயிற்சி அமைப்புகள்.",
+      "description3": "சான்றளிக்கப்பட்ட பயிற்றுநர்கள் மற்றும் ஊடக நிபுணர்கள் கொண்ட குழு."
+    },
+
+    "leadership": {
+      "title": "நம்பக்கூடிய தலைமையே",
+      "founder": {
+        "name": "டாக்டர் இன்ஸ்பைரிங் இலங்கோ - நிறுவனர் மற்றும் மேலாளர்",
+        "bio": "தன்னம்பிக்கை, உலக சாதனைக்குரிய வீரர் மற்றும் ஊக்குவிக்கும் பேச்சாளர். பார்வை இல்லாமலிருந்தாலும் உலகத்தை நோக்கி சென்று உத்வேகம் அளிக்கிறார்."
+      },
+      "executive": {
+        "name": "ஸ்ரீலதா இலங்கோ - நிர்வாக இயக்குனர்",
+        "bio": "பெண்கள் மேம்பாடு, சமூக சமத்துவம், மற்றும் திட்டங்களை செயல்படுத்தும் தலைவர்."
+      }
+    },
+
+    "services": {
+      "title": "எங்கள் முக்கிய சேவைகள்",
+      "list": {
+        "1": { "title": "1. ஆங்கில தொடர்பு பயிற்சி", "description": "வெளிநாட்டு தரத்திற்கேற்ப 200 மணி நேர பயிற்சி." },
+        "2": { "title": "2. தன்மையை மேம்படுத்தும் பயிற்சி", "description": "தன்னம்பிக்கை, தொடர்பு திறமை, உணர்ச்சி சமநிலை." },
+        "3": { "title": "3. இன்ஸ்பிடெயின்மெண்ட் நிகழ்ச்சி", "description": "உணர்ச்சி ஊக்கத்திற்கான நேரடி நிகழ்ச்சி." },
+        "4": { "title": "4. ஊக்கமளிக்கும் பேச்சுகள்", "description": "ஆங்கிலம், தமிழ் அல்லது இரண்டும் பேசும் உந்துதல் உரைகள்." },
+        "5": { "title": "5. உணர்ச்சி நுண்ணறிவு பயிற்சிகள்", "description": "ஒரே நாளில் அல்லது மாதாந்திர அடிப்படையில் நடத்தப்படும்." },
+        "6": { "title": "6. ஊடக தயாரிப்பு", "description": "பிராண்ட், கல்வி மற்றும் விழிப்புணர்விற்கான வீடியோக்கள்." },
+        "7": { "title": "7. குரல் கலை", "description": "டாக்டர் இலங்கோவின் உணர்ச்சி மிகுந்த குரல்." }
+      }
+    },
+
+    "additional": {
+      "title": "கூடுதல் சேவைகள்",
+      "items": [
+        "பொது பேச்சு பயிற்சி",
+        "IELTS, TOEFL, GRE, GMAT தயாரிப்பு",
+        "மாணவர் முன்னேற்ற திட்டங்கள்",
+        "மாணவர்களுக்கு SEL திட்டங்கள்"
+      ]
+    },
+
+    "custom": {
+      "title": "தனிப்பயன் நிபந்தனை",
+      "description": "ஒவ்வொரு பயிற்சியும் உங்கள் தேவைகளை அறிந்து வடிவமைக்கப்படுகிறது."
+    },
+
+    "recommendation": {
+      "title": "உங்களுக்கான பரிந்துரை",
+      "steps": [
+        "MoU க்கு கையெழுத்திடுங்கள்",
+        "மாதாந்திர ஆலோசகராக டாக்டர் இலங்கோவை நியமிக்கவும்",
+        "திறன் பயிற்சிகளை பரப்பவும்",
+        "Inspitainment™ நிகழ்ச்சியை ஏற்பாடு செய்யவும்",
+        "ஊடக தயாரிப்புகளுக்காக எங்களை நியமிக்கவும்",
+        "உயர்தர குரல் பயன்பாட்டுக்கு எங்களை அணுகவும்"
+      ]
+    },
+
+    "invite": {
+      "title": "பயணம் தொடங்கலாம்",
+      "items": [
+        "ஆங்கிலம் மற்றும் வாழ்க்கை திறன் பயிற்சி",
+        "Inspitainment™ நிகழ்ச்சி",
+        "ஊக்கமளிக்கும் உரைகள்",
+        "Emotional Intelligence பயிற்சி",
+        "குரல் கலை சேவைகள்",
+        "ஊடக தயாரிப்பு",
+        "சமூக மற்றும் மனநலம் திட்டங்கள்"
+      ]
+    },
+
+    "contact": {
+      "title": "தொடர்பு கொள்ள",
+      "landline": "தொலைபேசி: +91 44 4331 3170",
+      "mobile": "அலைபேசி: +91 99419 54545",
+      "email1": { "label": "மின்னஞ்சல்: admin09@acea2z.com" },
+      "email2": { "label": "மின்னஞ்சல்: inspiringilango@inspiringilango.com" },
+      "address": "நம்பர் 16, ராம் நகர், வேளச்சேரி, சென்னை - 600042"
+    }
+  },
+
   "viif": {
     "title": "உணர்ச்சி ஊக்கம் அளிக்கும் இலங்கோ",
     "subtitle1": "வாழ்க்கைகளை மாற்றும்",
