--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -378,28 +378,64 @@
     "intro": "தலைமை மற்றும் நிறுவன வளர்ச்சிக்காக டாக்டர் இன்ஸ்பைரிங் இளங்கோ வழங்கும் சேவைகளை அனுபவியுங்கள்.",
     "items": [
       {
-        "title": "முனைப்புப் பேச்சுகள்",
-        "description": "முனைப்புள்ள முக்கிய உரைகளுடன் உங்கள் குழுவை ஊக்கமளிக்கவும்."
+        "title": "ஹோப்ப்லைன் - 24/7 மனநலம் மையம்",
+        "description": "நாடளாவிய அளவில் 200+ பயிற்சி பெற்ற ஆலோசகர்கள் மூலம் நேரடி நெருக்கடி உதவியும் நீண்டகால வழிகாட்டுதலும் வழங்கப்படும்."
       },
       {
-        "title": "நிறுவன பயிற்சி",
-        "description": "விளைவுகளைக் கொண்ட பயிற்சியுடன் உற்பத்தித் திறனை மேம்படுத்துங்கள்."
+        "title": "இன்ஸ்பிடெயின்மெண்ட் - ஊக்கமும் பொழுதுபோக்கும் ஒன்றாகும்",
+        "description": "அம்சங்கள்: நேரடி இசை, ஊக்கமளிக்கும் உரைகள், கலந்துரையாடல் நல பயிற்சிகள் மற்றும் கலை நிகழ்ச்சிகள்."
       },
       {
-        "title": "குரல் பயிற்சி",
-        "description": "தெளிவும் ஒலி கட்டுப்பாடும் கொண்டுள்ள குரலுக்கான தனிப்பயன் பயிற்சி."
+        "title": "எம்பவரிங் விஷன் - பார்வையற்றோருக்கான டிஜிட்டல் கல்வி",
+        "description": "அம்சங்கள்: ஸ்மார்ட்போன்கள், லேப்டாப்கள், மென்பொருள்கள், பயிற்சி மற்றும் வாழ்க்கைத் திறன்கள். விளைவு: நிலையான டிஜிட்டல் வேலைவாய்ப்பு மற்றும் சுயநினைவு."
       },
       {
-        "title": "இன்ஸ்பிடெயின்மென்ட் நிகழ்ச்சிகள்",
-        "description": "மனப்பூர்வமும் மகிழ்ச்சியான நிகழ்ச்சிகள்."
+        "title": "ரைசிங் ஸ்டார்ஸ் - இளைஞருக்கான தனித்திறன் மேம்பாடு",
+        "description": "அம்சங்கள்: உணர்வு நுண்ணறிவு பயிற்சி, ஆங்கில روان்மை, தலைமை மற்றும் வேலைவாய்ப்பு பயிற்சி."
       },
       {
-        "title": "ஆன்லைன் பாடநெறிகள்",
-        "description": "சுய வேகத்தில் கற்றல் மற்றும் சான்றளிக்கப்பட்ட பாடநெறிகள்."
+        "title": "லைவ் லைஃப் இயக்கங்கள் - மனநல விழிப்புணர்வு",
+        "description": "கோண்டெண்ட்: பள்ளி, கல்லூரி மற்றும் சமூக விழிப்புணர்வுப் பரப்புகள், ஊக்கமும் வாழ்வை வலியுறுத்தும் மதிப்புகளும்."
       },
       {
-        "title": "தனிப்பட்ட ஆலோசனைகள்",
-        "description": "தனிப்பயன் வழிகாட்டலுடன் உங்கள் வளர்ச்சி மற்றும் இலக்குகளுக்கான வழிகாட்டல்."
+        "title": "எம்பவர் ஹர் - மகளிர் நலன் மற்றும் தலைமைத்திறன்",
+        "description": "கோண்டெண்ட்: தொழில் தொடக்கம், உணர்ச்சி வலிமை மற்றும் நிச்சயமான நடத்தை பயிற்சி."
+      },
+      {
+        "title": "ஸ்பீக் அப் - ஆங்கிலம் வழியாக அதிகாரமூட்டல்",
+        "description": "இலக்கு: கிராம மற்றும் நாகரீக விளிம்பு இளைஞர்கள். நோக்கம்: பேச்சுத் திறன் மற்றும் வேலைவாய்ப்பு."
+      },
+      {
+        "title": "எமோஷனல் வெல்ல்னெஸ் கிளினிக்குகள் - ஆலோசனை மற்றும் குழு சிகிச்சை",
+        "description": "சேவைகள்: ஒருவருக்கு ஒருவரான ஆலோசனை, குழு அமர்வுகள், மன அழுத்தம் மற்றும் 트라우மா ஆதரவு."
+      },
+      {
+        "title": "இன்ஸ்பையர்ட் லிவிங் - உரைகள் மற்றும் நிகழ்ச்சிகள்",
+        "description": "பேச்சாளர்கள்: டாக்டர் இன்ஸ்பைரிங் இளங்கோ மற்றும் விருந்தினர் நிபுணர்கள். தலைப்புகள்: நம்பிக்கை, நலம், நோக்கம்."
+      },
+      {
+        "title": "நம்பிக்கை, நலம் மற்றும் நோக்கம்",
+        "description": "நடைமுறை: திரைப்படங்கள், பண்பாட்டு பயிற்சிகள் மற்றும் மீள்பாதுகாப்பு வழிகள்."
+      },
+      {
+        "title": "ஆரோக்கியமான தேர்வுகள் - உணவுக்கும் உணர்ச்சிக்கும் இடையிலான தொடர்பு",
+        "description": "நோக்கம்: உணவுத் தேர்வுகள் மற்றும் மனநலத்துக்கிடையேயான உறவைக் கொண்டுவருவது."
+      },
+      {
+        "title": "முழுமையான நலம் - வாழ்க்கை முறை மற்றும் மன அமைதி",
+        "description": "தலைப்புகள்: உடற்பயிற்சி, தூக்கம், டிஜிட்டல் தவிர்ப்பு மற்றும் மன அழுத்த மேலாண்மை."
+      },
+      {
+        "title": "டிஜிட்டல் ஞானம் - தொழில்நுட்பத்தின் புத்திசாலித்தனமான பயன்பாடு",
+        "description": "பார்வையாளர்: மாணவர்கள் மற்றும் பணியாளர்கள். கவனம்: AI, சமூக ஊடக ஒழுங்கு மற்றும் உற்பத்தித்திறன்."
+      },
+      {
+        "title": "ஸ்மார்ட் பெற்றோர்",
+        "description": "பயிற்சிகள்: குழந்தைகளில் உணர்வுப்பூர்வ புத்திசாலித்தன்மை மற்றும் பாதுகாப்பான டிஜிட்டல் பழக்கங்களை வளர்க்குதல்."
+      },
+      {
+        "title": "ஹோப் ஃபண்ட் - நோயால் பாதிக்கப்பட்டவர்களுக்கு ஆதரவு",
+        "description": "ஆதரவு: உணர்வியல் ஆலோசனை, ஊக்கமளிக்கும் சிகிச்சை மற்றும் நிதி உதவி."
       }
     ],
     "book": {
