--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -526,87 +526,82 @@
       "none": "வரவுள்ள எந்த நிகழ்வுகளும் இல்லை."
     }
   },
-
   "membership": {
-    "title": "எங்கள் உறுப்பினர் திட்டத்தில் சேருங்கள்",
-    "subtitle": "உங்களை பொருத்த திட்டத்தை தேர்ந்தெடுத்து சிறப்பான நன்மைகளை அனுபவிக்கவும்",
-    "plans": {
-      "basic": {
-        "title": "அடிப்படை",
-        "price": "₹499 / மாதம்",
-        "features": [
-          "வாராந்திர இணையவழி கருத்தரங்குகளுக்கான அணுகல்",
-          "மாதந்தோறும் ஊக்கமளிக்கும் அமர்வுகள்",
-          "மின்னஞ்சல் செய்திமடல்"
-        ]
-      },
-      "premium": {
-        "title": "பிரீமியம்",
-        "price": "₹999 / மாதம்",
-        "features": [
-          "அடிப்படை அம்சங்கள் அனைத்தும்",
-          "1-க்கு-1 பயிற்சி (மாதந்தோறும்)",
-          "தனிப்பட்ட eBooks மற்றும் வளங்கள்"
-        ]
-      },
-      "elite": {
-        "title": "எலீட்",
-        "price": "₹1999 / மாதம்",
-        "features": [
-          "பிரீமியம் அம்சங்கள் அனைத்தும்",
-          "வாரந்தோறும் தனிப்பட்ட பயிற்சி",
-          "முன்னுரிமை மின்னஞ்சல் ஆதரவு",
-          "தனிப்பயன் இலக்குத் திட்டங்கள்"
-        ]
-      },
-      "button": "Calendly மூலம் சேரவும்"
-    },
-    "benefitsTitle": "ஏன் எங்கள் உறுப்பினராக சேர வேண்டும்?",
+    "title": "உறுப்பினர் திட்டங்கள்",
+    "subtitle": "உங்களின் குறிக்கோளுக்கு ஏற்ப சரியான திட்டத்தை தேர்ந்தெடுக்கவும்.",
+    "benefitsTitle": "உறுப்பினர் நன்மைகள்",
     "benefits": [
-      "உங்கள் உணர்வுத் திறமையை மேம்படுத்துங்கள்",
-      "உலகளாவிய மனச்சேர்ந்த சமூகத்துடன் இணைக",
-      "தனிப்பட்ட மற்றும் தொழில்முறை வளர்ச்சி கருவிகள்"
+      "நிபுணர் வழிகாட்டியுடன் அமர்வுகள்",
+      "தனிப்பயனாக்கப்பட்ட உடற்பயிற்சி மற்றும் உணவுக் குறிப்பு",
+      "24/7 ஆதரவும் வழிகாட்டலும்",
+      "முன்னேற்ற கண்காணிப்பு டாஷ்போர்டு",
+      "பிரத்தியேக உறுப்பினர் வளங்கள்"
     ],
-    "comparisonTitle": "திட்டங்களை ஒப்பிடுங்கள்",
-    "comparison": {
-      "features": "அம்சங்கள்",
-      "weeklyWebinars": "வாராந்திர இணையவழி கருத்தரங்குகள்",
-      "coaching": "1-க்கு-1 பயிற்சி",
-      "ebooks": "தனிப்பட்ட eBooks",
-      "support": "முன்னுரிமை ஆதரவு",
-      "yes": "✔",
-      "no": "✖",
-      "monthly": "மாதந்தோறும்",
-      "weekly": "வாரந்தோறும்"
+    "cta": {
+      "title": "உங்கள் வாழ்க்கையை மாற்ற தயாரா?",
+      "description": "உங்களுக்கு பொருத்தமான திட்டத்தை அறிய இலவச ஆலோசனையை பதிவு செய்யுங்கள்.",
+      "button": "இப்போது பதிவு செய்யவும்"
     },
     "faqTitle": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
     "faq": [
       {
-        "question": "நான் எப்போது வேண்டுமானாலும் ரத்துசெய்ய முடியுமா?",
-        "answer": "ஆம், நீங்கள் உங்கள் Calendly கணக்கிலிருந்து எப்போது வேண்டுமானாலும் உங்கள் உறுப்பினரை ரத்துசெய்யலாம்."
+        "question": "ஒவ்வொரு உறுப்பினர் திட்டத்திலும் என்ன அடங்கும்?",
+        "answer": "ஒவ்வொரு திட்டத்திலும் நிபுணர் பயிற்சி, உடற்பயிற்சி திட்டங்கள், ஊட்டச்சத்து வழிகாட்டி மற்றும் உறுப்பினர் போர்டல் அணுகல் அடங்கும்."
       },
       {
-        "question": "முயற்சி காலம் உள்ளதா?",
-        "answer": "தற்போது, ​​முயற்சி காலம் வழங்கப்படவில்லை, ஆனால் இலவச உள்ளடக்கத்தை ஆராயலாம்."
+        "question": "நான் திட்டத்தை பிறகு மேம்படுத்தவா அல்லது ரத்துசெய்யவா முடியும்?",
+        "answer": "ஆமாம், நீங்கள் எப்போதும் மேலேற்றம் அல்லது ரத்துசெய்யலாம். அதற்காக எந்த கூடுதல் கட்டணமும் இல்லை."
+      },
+      {
+        "question": "எனக்கு ஒரு குறிப்பிட்ட உடல் நிலை இருக்க வேண்டுமா?",
+        "answer": "வேண்டாம். உங்கள் தேவைகளைப் பொறுத்து திட்டங்கள் தனிப்பயனாக்கப்படும். தொடக்கநிலை அல்லது மேம்பட்ட நிலை எதுவாக இருந்தாலும் சரி."
       }
     ],
-    "testimonialsTitle": "உறுப்பினர்கள் என்ன சொல்கிறார்கள்",
+    "plans": {
+      "basic": {
+        "title": "அடிப்படை",
+        "price": "₹2,400/மாதம்",
+        "features": [
+          "வாராந்திர கண்காணிப்பு",
+          "தனிப்பயனாக்கப்பட்ட உடற்பயிற்சி திட்டங்கள்",
+          "அடிப்படை உணவுக் குறிப்புகள்"
+        ]
+      },
+      "premium": {
+        "title": "பிரீமியம்",
+        "price": "₹4,800/மாதம்",
+        "features": [
+          "அடிப்படையில் உள்ள அனைத்தும்",
+          "தனிப்பட்ட பயிற்சியாளர் ஆதரவு",
+          "மேம்பட்ட உணவுக் குறிப்புகள்",
+          "கோல் டிராக்கிங் டாஷ்போர்டு"
+        ]
+      },
+      "elite": {
+        "title": "எலீட்",
+        "price": "₹8,000/மாதம்",
+        "features": [
+          "பிரீமியத்தில் உள்ள அனைத்தும்",
+          "தினசரி பயிற்சி அழைப்புகள்",
+          "பிரத்தியேக செயலி அணுகல்",
+          "முன்னுரிமை ஆதரவு"
+        ]
+      }
+    },
     "testimonials": [
       {
-        "quote": "இந்த திட்டம் எனது மனப்பாங்கும் தொழில் பாதையும் மாற்றியது. டாக்டர் இளங்கோ மிகுந்த ஊக்கமளிக்கிறார்!",
-        "author": "- பிரியா ஆர்., சென்னை"
+        "quote": "இந்த உறுப்பினர் திட்டம் என் வாழ்க்கையை மாற்றியது. நான் எப்போதும் விடா உற்சாகத்துடன் இருக்கிறேன்!",
+        "author": "சமந்தா ஆர்."
       },
       {
-        "quote": "எலீட் பயிற்சி உண்மையில் மாற்றத்தை ஏற்படுத்துகிறது. இது எனக்கே சொந்தமாக இருப்பது போலவே உணர்கிறது.",
-        "author": "- ராகுல் எஸ்., பெங்களூர்"
+        "quote": "அற்புதமான ஆதரவும் திட்டங்களும். 3 மாதங்களில் எனது குறிக்கோளை அடைந்தேன்.",
+        "author": "ராஜ் கே."
       }
-    ],
-    "cta": {
-      "title": "உங்கள் வாழ்க்கையை மாற்ற தயாரா?",
-      "text": "உங்களைப் பொருத்த திட்டத்தை தேர்ந்தெடுத்து இன்று உங்கள் பயணத்தை தொடங்குங்கள்!",
-      "button": "திட்டத்தை தேர்ந்தெடுக்கவும்"
-    }
+    ]
   }
+
+
+  
 }
 
 
