--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -476,23 +476,23 @@
   "brochures": {
     "title": "எங்கள் விளக்கக் கையேடுகளை பதிவிறக்குங்கள்",
     "brochure1": {
-      "title": "விளக்கக் கையேடு 1",
-      "description": "எங்கள் முதன்மை சேவைகள் பற்றிய தகவல்கள்.",
-      "download": "PDF பதிவிறக்குக",
-      "alt": "விளக்கக் கையேடு 1 முகப்பு"
-    },
-    "brochure2": {
-      "title": "விளக்கக் கையேடு 2",
-      "description": "ஆலோசனை திட்டங்கள் பற்றிய விரிவான விளக்கம்.",
-      "download": "PDF பதிவிறக்குக",
-      "alt": "விளக்கக் கையேடு 2 முகப்பு"
-    },
-    "brochure3": {
-      "title": "விளக்கக் கையேடு 3",
-      "description": "விலை மற்றும் திட்டங்கள் பற்றி விளக்கம்.",
-      "download": "PDF பதிவிறக்குக",
-      "alt": "விளக்கக் கையேடு 3 முகப்பு"
-    }
+    "title": "விளக்கக்குறிப்பு ஒன்று",
+    "description": "இன்ஸ்பையரிங் இளங்கோ இன்ஸ்பிடெயின்மெண்ட்",
+    "download": "PDF ஐ பதிவிறக்கவும்",
+    "alt": "இன்ஸ்பையரிங் இளங்கோ இன்ஸ்பிடெயின்மெண்ட் அட்டைப்படம்"
+  },
+  "brochure2": {
+    "title": "விளக்கக்குறிப்பு இரண்டு",
+    "description": "வாழ்க்கைகளை மாற்றும், நம்பிக்கையை தூண்டும்.",
+    "download": "PDF ஐ பதிவிறக்கவும்",
+    "alt": "வாழ்க்கைகளை மாற்றும் அட்டைப்படம்"
+  },
+  "brochure3": {
+    "title": "விளக்கக்குறிப்பு மூன்று",
+    "description": "ஏஸ் பணசியா லைஃப் ஸ்கில்ஸ் பிரைவேட் லிமிடெட்.",
+    "download": "PDF ஐ பதிவிறக்கவும்",
+    "alt": "ஏஸ் பணசியா அட்டைப்படம்"
+  }
   },
   "events": {
     "header": {
